--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
+    "glob": "^10.3.3",
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "^18.2.0",
@@ -28,5 +29,8 @@
     "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prettier": "3.0.2"
   }
 }
