--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.8.9",
+    "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
